--- a/conf/machine/wetekplay2.conf
+++ b/conf/machine/wetekplay2.conf
@@ -9,7 +9,7 @@ require conf/machine/include/wetek-amlogic.inc
 require conf/machine/include/arm/arch-armv8.inc
 require conf/machine/include/soc-family.inc
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     wetek-dvb-modules-${MACHINE} \
     wetek-dhd-${MACHINE} \
     wetek-mali-${MACHINE} \
@@ -20,7 +20,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     opengl-amlogic \
     "
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "\
     kernel-module-cdfs \
     kernel-module-sysfillrect \
     kernel-module-syscopyarea \
@@ -59,7 +59,7 @@ KERNEL_MODULE_AUTOLOAD += "\
 module_conf_dhd = "options dhd firmware_path=/lib/firmware/brcm/ nvram_path=/lib/firmware/brcm/"
 
 KERNEL_MODULE_PROBECONF += "\
-	dhd \
+    dhd \
 "
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-wetek2"
