--- a/conf/machine/wetekplay.conf
+++ b/conf/machine/wetekplay.conf
@@ -13,7 +13,7 @@ DEFAULTTUNE ?= "cortexa9hf-neon"
 include conf/machine/include/tune-cortexa9.inc
 require conf/machine/include/soc-family.inc
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     wetek-dvb-modules-${MACHINE} \
     gst-amlavsink \
     gst-app \
@@ -22,7 +22,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     opengl-amlogic \
     "
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "\
     kernel-module-cdfs \
     kernel-module-sysfillrect \
     kernel-module-syscopyarea \
