--- a/conf/machine/wetekhub.conf
+++ b/conf/machine/wetekhub.conf
@@ -66,4 +66,4 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-wetek2"
 PREFERRED_VERSION_linux-wetek2 = "3.14.29"
 
 KERNEL_IMAGETYPE = "Image"
-KERNEL_DEVICETREE = "meson-gxbb-wetek-hub.dtb Image-meson-gxbb-wetek-hub.dtb"
+KERNEL_DEVICETREE = "gxbb_p200_1G_wetek_hub.dts"
