--- a/conf/machine/wetekhub.conf
+++ b/conf/machine/wetekhub.conf
@@ -4,4 +4,4 @@
 
 require conf/machine/include/wetek-common.inc
 
-KERNEL_DEVICETREE = "gxbb_p200_1G_wetek_hub.dts"
+KERNEL_DEVICETREE = "gxbb_p200_1G_wetek_hub.dtb"
