We can't use all wifi/bt firmwares in one image as there is conflict with config.txt so only use what we need, it seems k2pro and k3pro are using 6335 but I don't know about the rest

--- a/conf/machine/k1plus.conf
+++ b/conf/machine/k1plus.conf
@@ -7,3 +7,7 @@ SOC_FAMILY = "AML905"
 require conf/machine/include/mecool.inc
 
 KERNEL_DEVICETREE = "gxbb_p200_k1_plus.dtb"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+    firmware-ap6210-mecool \
+    "
