add rtl8189es module for k1plus

--- a/conf/machine/k1plus.conf
+++ b/conf/machine/k1plus.conf
@@ -7,3 +7,13 @@ SOC_FAMILY = "AML905"
 require conf/machine/include/mecool.inc
 
 KERNEL_DEVICETREE = "gxbb_p200_k1_plus.dtb"
+
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+	rtl8189es-aml \
+	"
+
+
+KERNEL_MODULE_AUTOLOAD += "\
+	8189es \
+	"
